--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cursoandroid.i2c">
 
+    <uses-permission android:name="com.google.android.things.permission.MANAGE_INPUT_DRIVERS"/>
     <uses-permission
         android:name="com.google.android.things.permission.USE_PERIPHERAL_IO"/>
+    <!--
+    <uses-permission
+        android:name="com.google.android.things.permission.USE_PERIPHERAL_IO"/>
+        -->
 
     <application android:label="@string/app_name">
         <uses-library android:name="com.google.android.things" />
